# stalker-mini-app

./: .gitignore  docker-compose.yml  requirements.txt  thoughts.txt
auth-service/: index.html  main.py  requirements.txt
frontend/: Dockerfile  index.html
nginx/: nginx.conf
services/auth/: Dockerfile  db.py  main.py  models.py  requirements.txt
services/auth/migrations/: env.py
services/inventory/: Dockerfile  db.py  main.py  models.py  requirements.txt  schemas.py  settings.py  use_cases.py
services/utils/auth_utils/: pyproject.toml
services/utils/auth_utils/miniapp_auth_utils/: __init__.py  token_utils.py
services/utils/settings/: pyproject.toml
services/utils/settings/app_settings/: settings.py
versions/: 2bf891253d8e_init_inventory.py  575e63bc4533_init.py
