[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app_settings"
version = "0.1.0"
description = "Shared settings for services"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]